modify documentation
